# skydock

./: .gitignore  README.md  class_digam.txt  fly test pectoin landing mishion.waypoints  landing data.xlsx  requirements.txt  setup_by_runing_setup.sh
code/: ai.py  main2.py
code/arcive/: flowchart.drawio  (+2 more)
code/software/: README.md  ai.py  drone_snapshots.py  move.py  pyproject.toml  requirements.txt  telemetry.py
code/software/fsm/: __init__.py  template.py
code/software/tests/: test_fsm.py
docs/: frame.md  how to set up the pi and ai.md  scope.md
firmware/: 4 yes airspeed yes mavtelmetry no servos and moters.param  5 telm works rc works some servos work.param  7 all works but range finder and opical flow.param  8 no battery warnings every works.param  all works but will reflash to remove crash dump.param  back up close to gettingrfd900x to conect.param
hardware/: .~lock.BOM.ods#  BOM.ods  DJI F450.F550.Arm.Landing_gear v1.3mf  Ethernet Male.STEP  prop genarater.scad  setup_by_runing_setup.sh  ~$BOM.ods
software/: .gitignore  ai.py  ai_intergration_plan.drawio  all_mavutil_commands.md  battery.py  drone.py  drone_snapshots.py  drone_state_homing.py  flowchart.drawio  get_cam_stream_and_run_ai.py  get_cam_stream_do_ai_to_it.py  get_weed_positon.py  global_heat_map.txt  hight_calib.py  main.py  move.py  power_suply_maw_power_test.py  print_telm_works.py  requirements.txt  run_ai.py  send_command.py  sensors.py  spry_psudo_code.txt  telemetry.py  test.py  test_move.py  todo-softwhere.md  weed.py
software.backup/: drone_log.txt  requirements.txt
(+52019 files in other folders)
